apps/production/hyperion/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hyperion
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
    external-dns.kubernetes.io/cloudflare-proxied: "false"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-body-size: "1024m"
spec:
  tls:
  - hosts:
    - hyperion-sx.dariomazza.net
    - hyperion-dx.dariomazza.net
    secretName: hyperion-tls
  rules:
  - host: hyperion-sx.dariomazza.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hyperion-sx
            port:
              number: 8090
  - host: hyperion-dx.dariomazza.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hyperion-dx
            port:
              number: 8090
